Complete Student service is developed

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/student-db
+#MONGO_URI=mongodb://mongo:27017/student-db
+MONGO_URI=mongodb://127.0.0.1:27017/student-db
+JWT_SECRET=BITS@ScalableService2025
+
