--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.1",
+    "swagger-ui-express": "^5.0.1"
   }
 }
